whitespace fix 2

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
 * {margin: 0; padding: 0;}
 body, html{
 min-height:100%;
-overflow-x:hidden;
+}
+.overflow-animate {
+	overflow-x:hidden;
 }
 a {text-decoration: none;}
 ul {list-style-type: none;}
